fix: refactor responsive design in project templates

--- a/src/templates/projects/assigment_section.html
+++ b/src/templates/projects/assigment_section.html
@@ -94,5 +94,5 @@
             </div>
         </div>
     </div>
-
+<div>
     <script src="{% static 'js/project/manage_assigment.js' %}"></script>
