--- a/src/templates/projects/create_assigment.html
+++ b/src/templates/projects/create_assigment.html
@@ -1,20 +1,19 @@
 {% extends "navigation/navigation.html" %}
 
 {% load static %}
-
 {% load i18n %}
 {% block app_content %}
 
 <div class="flex justify-center items-center">
 
-    <div class="flex flex-col mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full">
+    <div class="flex flex-col mx-4 sm:mx-10 md:mx-40 bg-bg_gray p-6 rounded-lg shadow-lg w-full md:w-2/3 lg:w-1/2">
         <form method="post">
             {% csrf_token %}
             <div class="mt-8">
                 <label for="name" class="block text-md font-medium text-primary_black">{% translate "Nombre del Entregable" %}</label>
                 <input id="name" name="name" type="text" {% if is_editing %} value="{{assigment.title}}" {% endif%}
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none
-                focus:ring-primary_medium focus:border-primary_medium sm:text-sm" required>
+                    focus:ring-primary_medium focus:border-primary_medium sm:text-sm" required>
             </div>
             <div class="mt-8">
                 <label for="description" class="block text-md font-medium text-primary_black">{% translate "Descripcion del Entregable" %}</label>
@@ -23,7 +22,7 @@
                     required>{% if is_editing %}{{assigment.description}}{% endif %}</textarea>
             </div>
 
-            <div class="mt-8 w-1/2">
+            <div class="mt-8 w-full md:w-1/2">
                 <label for="user" class="block text-md font-medium text-primary_black">{% translate "Usuario encargado" %}</label>
 
                 <select name="user" id="user"
@@ -34,7 +33,7 @@
                 </select>
             </div>
 
-            <div class="w-1/2 mt-8">
+            <div class="w-full md:w-1/2 mt-8">
                 <label for="end_date" class="block text-md font-medium text-primary_black">{% translate "Fecha de Finalizacion" %}</label>
                 <input name="end_date" type="date" id="end_date" {% if is_editing and assigment.end_date %}
                     value="{{ assigment.end_date|date:'Y-m-d' }}" {% endif %}
@@ -42,8 +41,7 @@
                     required>
             </div>
 
-
-            <div class="justify-end  items-center mt-4">
+            <div class="flex justify-end items-center mt-4">
                 <a {% if is_editing %} href="/project/edit_milestone/{{assigment.milestone.id}}">
                     {% else %}
                     href="/project/edit_milestone/{{milestone.id}}">
@@ -56,6 +54,5 @@
     </div>
 
 </div>
-
 
 {% endblock %}
