--- a/src/templates/projects/data_project.html
+++ b/src/templates/projects/data_project.html
@@ -1,7 +1,7 @@
 {% extends "projects/default_project_view.html" %}
 
 {% block section %}
-<div class="container">
+<div class="container mx-auto">
     <!-- Panel de Control de Progreso -->
     <h1 class="text-primary_black text-2xl font-bold mt-4">Informes del Proyecto</h1>
 
@@ -9,7 +9,7 @@
     <div class="bg-primary_lightest p-6 rounded-xl shadow-md mt-6">
         <h2 class="text-xl font-bold text-primary_black">Progreso de Hitos</h2>
         <div class="bg-white p-4 rounded-lg shadow-md">
-            <p class="mb-4"><strong>Progreso Actual de Hitos:</strong> </p>
+            <p class="mb-4"><strong>Progreso Actual de Hitos:</strong></p>
 
             <!-- Barra de Progreso para los Hitos -->
             <div class="w-full bg-gray-200 rounded-full h-6">
@@ -27,7 +27,6 @@
             </div>
 
             <script>
-                // Establecer el ancho de la barra de progreso de los hitos dinámicamente
                 document.getElementById('milestone-progress-bar').style.width = "{{ milestone_progress|floatformat:0|default_if_none:0 }}%";
             </script>
 
@@ -61,7 +60,6 @@
             </div>
 
             <script>
-                // Establecer el ancho de la barra de progreso de las tareas dinámicamente
                 document.getElementById('task-progress-bar').style.width = "{{ task_progress|floatformat:0|default_if_none:0 }}%";
             </script>
 
@@ -72,12 +70,6 @@
             </div>
         </div>
     </div>
-
-    
-
-
-
-    
 
     <!-- Sección de Hitos y Tareas Agrupadas -->
     <div class="bg-primary_lightest p-6 rounded-xl shadow-md mt-6">
@@ -91,27 +83,25 @@
                     <p><strong>Descripción:</strong> {{ milestone.description }}</p>
                     <p><strong>Fecha de Inicio:</strong> {{ milestone.start_date }}</p>
                     <p><strong>Fecha de Fin:</strong> {{ milestone.end_date }}</p>
-                
-                    <!-- Progreso del hito (cantidad de entregables completados) -->
-                    <p><strong>Progreso de Entregables:</strong> {{ progress_data.progress|default_if_none:"0" }}%  ({{ milestone.amount_completed }} de {{ milestone.assigments.count }} completados)</p>
-                
-                    <!-- Barra de Progreso de Entregables -->
-                    <!-- Barra de Progreso de Entregables -->
-<div class="w-full bg-gray-200 rounded-full h-6 mt-2">
-    <div class="
-        {% if progress_data.progress < 33 %}
-            bg-red-500
-        {% elif progress_data.progress < 66 %}
-            bg-yellow-500
-        {% else %}
-            bg-green-500
-        {% endif %}
-        h-6 rounded-full text-center text-white text-sm leading-none"
-        style="width: {{ progress_data.progress|floatformat:0 }}%;">
-        {{ progress_data.progress|floatformat:0 }}%
-    </div>
-</div>
 
+                    <!-- Progreso del hito -->
+                    <p><strong>Progreso de Entregables:</strong> {{ progress_data.progress|default_if_none:"0" }}% ({{ milestone.amount_completed }} de {{ milestone.assigments.count }} completados)</p>
+
+                    <!-- Barra de Progreso de Entregables -->
+                    <div class="w-full bg-gray-200 rounded-full h-6 mt-2">
+                        <div class="
+                            {% if progress_data.progress < 33 %}
+                                bg-red-500
+                            {% elif progress_data.progress < 66 %}
+                                bg-yellow-500
+                            {% else %}
+                                bg-green-500
+                            {% endif %}
+                            h-6 rounded-full text-center text-white text-sm leading-none"
+                            style="width: {{ progress_data.progress|floatformat:0 }}%;">
+                            {{ progress_data.progress|floatformat:0 }}%
+                        </div>
+                    </div>
 
                     <!-- Lista de Tareas Asociadas al Hito -->
                     <div class="mt-4">
@@ -146,68 +136,64 @@
         {% endif %}
     </div>
 
-</div>
+    <!-- Tablero Kanban -->
+    <div class="container mt-8">
+        <h1 class="text-primary_black text-2xl font-bold mt-4">Tablero Kanban</h1>
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mt-6">
+            <!-- Columna para "Pendiente" -->
+            <div class="bg-primary_lightest p-4 rounded-lg shadow-md">
+                <h2 class="text-xl font-bold text-primary_black mb-4">Pendiente</h2>
+                {% for task in tasks %}
+                    {% if task.state == 'pendiente' %}
+                    <div class="bg-white p-4 rounded-lg shadow-md mb-4">
+                        <h3 class="text-lg font-semibold">{{ task.title }}</h3>
+                        <p><strong>Descripción:</strong> {{ task.description }}</p>
+                        <p><strong>Responsable:</strong> {{ task.responsible.username }}</p>
+                        <p><strong>Fecha de Inicio:</strong> {{ task.start_date }}</p>
+                        <p><strong>Fecha de Fin:</strong> {{ task.end_date }}</p>
+                    </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
 
-<div class="container">
-    <!-- Panel de Control de Progreso -->
-    <h1 class="text-primary_black text-2xl font-bold mt-4">Tablero Kanban</h1>
+            <!-- Columna para "En Progreso" -->
+            <div class="bg-primary_lightest p-4 rounded-lg shadow-md">
+                <h2 class="text-xl font-bold text-primary_black mb-4">En Progreso</h2>
+                {% for task in tasks %}
+                    {% if task.state == 'En progreso' %}
+                    <div class="bg-white p-4 rounded-lg shadow-md mb-4">
+                        <h3 class="text-lg font-semibold">{{ task.title }}</h3>
+                        <p><strong>Descripción:</strong> {{ task.description }}</p>
+                        <p><strong>Responsable:</strong> {{ task.responsible.username }}</p>
+                        <p><strong>Fecha de Inicio:</strong> {{ task.start_date }}</p>
+                        <p><strong>Fecha de Fin:</strong> {{ task.end_date }}</p>
+                    </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
 
-    <div class="grid grid-cols-3 gap-4 mt-6">
-        <!-- Columna para "Pendiente" -->
-        <div class="bg-primary_lightest p-4 rounded-lg shadow-md">
-            <h2 class="text-xl font-bold text-primary_black mb-4">Pendiente</h2>
-            {% for task in tasks %}
-                {% if task.state == 'pendiente' %}
-                <div class="bg-white p-4 rounded-lg shadow-md mb-4">
-                    <h3 class="text-lg font-semibold">{{ task.title }}</h3>
-                    <p><strong>Descripción:</strong> {{ task.description }}</p>
-                    <p><strong>Responsable:</strong> {{ task.responsible.username }}</p>
-                    <p><strong>Fecha de Inicio:</strong> {{ task.start_date }}</p>
-                    <p><strong>Fecha de Fin:</strong> {{ task.end_date }}</p>
-                </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-
-        <!-- Columna para "En Progreso" -->
-        <div class="bg-primary_lightest p-4 rounded-lg shadow-md">
-            <h2 class="text-xl font-bold text-primary_black mb-4">En Progreso</h2>
-            {% for task in tasks %}
-                {% if task.state == 'En progreso' %}
-                <div class="bg-white p-4 rounded-lg shadow-md mb-4">
-                    <h3 class="text-lg font-semibold">{{ task.title }}</h3>
-                    <p><strong>Descripción:</strong> {{ task.description }}</p>
-                    <p><strong>Responsable:</strong> {{ task.responsible.username }}</p>
-                    <p><strong>Fecha de Inicio:</strong> {{ task.start_date }}</p>
-                    <p><strong>Fecha de Fin:</strong> {{ task.end_date }}</p>
-                </div>
-                {% endif %}
-            {% endfor %}
-        </div>
-
-        <!-- Columna para "Completada" -->
-        <div class="bg-primary_lightest p-4 rounded-lg shadow-md">
-            <h2 class="text-xl font-bold text-primary_black mb-4">Completada</h2>
-            {% for task in tasks %}
-                {% if task.state == 'Completada' %}
-                <div class="bg-white p-4 rounded-lg shadow-md mb-4">
-                    <h3 class="text-lg font-semibold">{{ task.title }}</h3>
-                    <p><strong>Descripción:</strong> {{ task.description }}</p>
-                    <p><strong>Responsable:</strong> {{ task.responsible.username }}</p>
-                    <p><strong>Fecha de Inicio:</strong> {{ task.start_date }}</p>
-                    <p><strong>Fecha de Fin:</strong> {{ task.end_date }}</p>
-                </div>
-                {% endif %}
-            {% endfor %}
+            <!-- Columna para "Completada" -->
+            <div class="bg-primary_lightest p-4 rounded-lg shadow-md">
+                <h2 class="text-xl font-bold text-primary_black mb-4">Completada</h2>
+                {% for task in tasks %}
+                    {% if task.state == 'Completada' %}
+                    <div class="bg-white p-4 rounded-lg shadow-md mb-4">
+                        <h3 class="text-lg font-semibold">{{ task.title }}</h3>
+                        <p><strong>Descripción:</strong> {{ task.description }}</p>
+                        <p><strong>Responsable:</strong> {{ task.responsible.username }}</p>
+                        <p><strong>Fecha de Inicio:</strong> {{ task.start_date }}</p>
+                        <p><strong>Fecha de Fin:</strong> {{ task.end_date }}</p>
+                    </div>
+                    {% endif %}
+                {% endfor %}
+            </div>
         </div>
     </div>
-</div>
 
-
-
-    <div class="container">
+    <!-- Diagrama de Gantt -->
+    <div class="container mt-8">
         <h1 class="text-primary_black text-2xl font-bold mt-4">Diagrama de Gantt</h1>
-    
+
         <!-- Filtro para seleccionar el hito -->
         <div class="mt-4 mb-6">
             <label for="milestoneFilter" class="text-lg font-medium text-primary_black">Filtrar por Hito:</label>
@@ -218,22 +204,20 @@
                 {% endfor %}
             </select>
         </div>
-    
+
         <!-- Contenedor del diagrama de Gantt -->
         <div id="ganttChart" class="mt-3" style="height: 600px; width: 100%;"></div>
-    
+
         <script type="text/javascript" src="https://unpkg.com/vis-timeline@latest/standalone/umd/vis-timeline-graph2d.min.js"></script>
         <link href="https://unpkg.com/vis-timeline@latest/styles/vis-timeline-graph2d.min.css" rel="stylesheet" type="text/css" />
-    
+
         <script>
-            // Crear los grupos de hitos y tareas
             var groups = new vis.DataSet([
                 {% for milestone in milestones %}
                     {id: 'milestone_{{ milestone.id }}', content: 'Hito: {{ milestone.name }}', className: 'milestone-group'},
                 {% endfor %}
             ]);
-    
-            // Crear los elementos para los hitos y las tareas
+
             var items = new vis.DataSet([
                 {% for milestone in milestones %}
                     {% for task in milestone.tasks.all %}
@@ -241,58 +225,51 @@
                     {% endfor %}
                 {% endfor %}
             ]);
-    
-            // Configuración del diagrama de Gantt
+
             var options = {
-                stack: false,  // No apilar las tareas
-                horizontalScroll: true,  // Scroll horizontal
-                showCurrentTime: true,  // Mostrar la línea de tiempo actual
-                zoomable: true,  // Permitir el zoom
-                moveable: true,  // Permitir movimiento
-                height: '400px',  // Altura del gráfico
+                stack: false,
+                horizontalScroll: true,
+                showCurrentTime: true,
+                zoomable: true,
+                moveable: true,
+                height: '400px',
                 margin: { 
-                    item: 10,  // Espaciado entre las tareas
-                    axis: 300   // Espacio para el eje de tiempo
+                    item: 10,
+                    axis: 300
                 },
-                zoomMin: 1000 * 60 * 60 * 24 * 7, // Zoom mínimo: 1 semana
-                zoomMax: 1000 * 60 * 60 * 24 * 365 * 5, // Zoom máximo: 5 años
-                orientation: { axis: "top" },  // Eje de tiempo en la parte superior
-                groupOrder: 'content',  // Ordenar los grupos por nombre
-                timeAxis: { scale: 'month', step: 1 },  // Escala de tiempo por meses
+                zoomMin: 1000 * 60 * 60 * 24 * 7,
+                zoomMax: 1000 * 60 * 60 * 24 * 365 * 5,
+                orientation: { axis: "top" },
+                groupOrder: 'content',
+                timeAxis: { scale: 'month', step: 1 },
             };
-    
-            // Inicializar el gráfico
+
             var container = document.getElementById('ganttChart');
             var timeline = new vis.Timeline(container, items, groups, options);
-    
-            // Filtrar las tareas según el hito seleccionado
+
             document.getElementById('milestoneFilter').addEventListener('change', function () {
                 var selectedMilestone = this.value;
-    
+
                 if (selectedMilestone === 'all') {
-                    // Mostrar todas las tareas si se selecciona "Mostrar Todos"
                     timeline.setItems(items);
                     timeline.setGroups(groups);
                 } else {
-                    // Filtrar las tareas por el hito seleccionado
                     var filteredItems = items.get({
                         filter: function (item) {
                             return item.group === selectedMilestone;
                         }
                     });
-    
+
                     var filteredGroups = groups.get({
                         filter: function (group) {
                             return group.id === selectedMilestone;
                         }
                     });
-    
+
                     timeline.setItems(filteredItems);
                     timeline.setGroups(filteredGroups);
                 }
             });
         </script>
     </div>
-    
-    {% endblock %}
-    
+{% endblock %}
