--- a/src/templates/projects/project_main_view.html
+++ b/src/templates/projects/project_main_view.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% block app_content %}
 <div class="container mx-auto px-4 py-6">
-    <div class="flex flex-row justify-between items-center w-full bg-bg_gray py-2 px-4 rounded-xl mb-4">
+    <div class="flex flex-col gap-2 md:flex-row justify-between items-center w-full bg-bg_gray py-2 px-4 rounded-xl mb-4">
         <div class="flex flex-row gap-2">
             {% include 'utils/anchor_button.html' with label='Disponibles' type=1 %}
             {% url 'my_projects' as list_projects_available %}
