feat: refactor responsivedesign in profiles

--- a/src/templates/profile/add_course.html
+++ b/src/templates/profile/add_course.html
@@ -6,7 +6,7 @@
 <div class="pt-16 pb-10 px-4 sm:px-6 lg:px-8 bg-bg_white"> 
 
     <div class="max-w-7xl mx-auto mb-6 sm:ml-0 lg:ml-40">
-        <h1 class="text-3xl font-bold text-primary_black text-left">{% translate "Añadir Curso al Portafolio %}</h1>
+        <h1 class="text-3xl font-bold text-primary_black text-left">{% translate "Añadir Curso al Portafolio" %}</h1>
         <h2 class="text-lg font-semibold text-primary_dark text-left">{% translate "Cursos" %}</h2> 
         <p class="block text-primary_black font-normal mt-4 font-sans semi">
             {% translate "Aquí puedes agregar información de cursos relevantes que hayas realizado." %}
