--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -1,20 +1,20 @@
 {% extends "navigation/navigation.html" %}
 
+{% load static %}
 {% load i18n %}
 {% block app_content %}
-<div class="flex flex-col items-start justify-center w-full h-full px-8">
+<div class="flex flex-col items-start justify-center w-full h-full px-4 md:px-8">
 
     <!-- Información del Freelancer -->
-    <div class="w-full bg-bg_gray shadow-lg rounded-lg p-8">
+    <div class="w-full bg-bg_gray shadow-lg rounded-lg p-6 md:p-8">
         <div class="flex flex-col sm:flex-row items-center sm:items-start">
             <img src="{% if request.profile.photo %}{{ request.profile.photo.url }}{% else %}https://avatars.githubusercontent.com/u/1561955?v=4{% endif %}"
                 alt="Foto de {{ request.profile.user.username }}" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full shadow-lg">
             <div class="sm:ml-6 mt-6 sm:mt-0 flex-1">
-                <h1 class="text-3xl sm:text-3xl font-bold text-primary_medium">{{ request.profile.user.username }}</h1>
-                <p class="text-primary_black font-semibold">Desarrollador Full Stack</p>
+                <h1 class="text-2xl md:text-3xl font-bold text-primary_medium">{{ request.profile.user.username }}</h1>
+                <p class="text-primary_black font-semibold">{% translate "Desarrollador Full Stack" %}</p>
                 <p class="text-primary_black mt-2">
-                    Apasionado del desarrollo web con más de 5 años de experiencia en la creación de aplicaciones
-                    robustas y escalables.
+                    {% translate "Apasionado del desarrollo web con más de 5 años de experiencia en la creación de aplicaciones robustas y escalables." %}
                 </p>
                 <p class="text-primary_black mt-2 flex items-center">
                     Cali, Valle del Cauca, Colombia
@@ -39,7 +39,7 @@
                 {% if is_owner %}
                 <button
                     class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
-                    Editar Perfil
+                    {% translate "Editar Perfil" %}
                 </button>
                 {% endif %}
             </div>
@@ -49,8 +49,7 @@
             <h2 class="text-xl font-bold text-primary_black">{% translate "Habilidades" %}</h2>
             <div class="mt-4 flex flex-wrap gap-2">
                 {% for skill in skills %}
-                <span
-                    class="bg-primary_lightest text-primary_black px-3 py-1 rounded-full text-sm font-medium shadow-sm">
+                <span class="bg-primary_lightest text-primary_black px-3 py-1 rounded-full text-sm font-medium shadow-sm">
                     {{ skill.name }}
                 </span>
                 {% empty %}
@@ -61,16 +60,15 @@
     </div>
 
     <!-- Experiencia Laboral Section -->
-    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
-      
+    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
         <div class="flex justify-between items-center">
-            <h2 class="text-2xl font-bold text-primary_black">{% translate "Experiencia Laboral" %}</h2>
+            <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Experiencia Laboral" %}</h2>
             <a href="{% url 'add_experience' %}"
-                class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark">
-                Añadir
+                class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
+                {% translate "Añadir" %}
             </a>
         </div>
-      
+
         <ul class="mt-4 space-y-6">
             {% for experience in experiences %}
             <li class="bg-white p-6 rounded-lg shadow flex items-start space-x-4">
@@ -93,21 +91,20 @@
             <li class="text-gray-500">{% translate "No se ha añadido experiencia laboral aún." %}</li>
             {% endfor %}
         </ul>
-      
     </div>
+
     <!-- Portafolio Section -->
-    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
-      
+    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
         <div class="flex justify-between items-center">
-            <h2 class="text-2xl font-bold text-primary_black">{% translate "Portafolio" %}</h2>
-            <div class="space-x-4">
+            <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Portafolio" %}</h2>
+            <div class="flex flex-col md:flex-row gap-2">
                 <a href="{% url 'add_project' %}"
-                    class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark">
-                    Añadir Proyecto
+                    class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
+                    {% translate "Añadir Proyecto" %}
                 </a>
                 <a href="{% url 'add_course' %}"
-                    class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark">
-                    Añadir Curso
+                    class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
+                    {% translate "Añadir Curso" %}
                 </a>
             </div>
         </div>
@@ -118,7 +115,7 @@
             {% for project in projects %}
             <div class="bg-gray-100 rounded-lg shadow-lg overflow-hidden">
                 <img src="{{ project.project_image.url }}" alt="{{ project.project_name }}"
-                    class="w-full h-40 object-cover rounded">
+                    class="w-full h-40 object-cover">
                 <div class="p-4">
                     <h5 class="text-lg font-semibold text-gray-800">{{ project.project_name }}</h5>
                     <p class="text-gray-600 mt-2">{{ project.project_description }}</p>
@@ -129,7 +126,7 @@
             {% endfor %}
         </div>
 
-        <h4 class="text-xl font-semibold text-primary_medium mt-8">Cursos</h4>
+        <h4 class="text-xl font-semibold text-primary_medium mt-8">{% translate "Cursos" %}</h4>
         <div class="space-y-6 mt-4">
             {% for course in courses %}
             <div class="flex items-center bg-gray-100 p-4 rounded-lg shadow-lg">
@@ -156,97 +153,89 @@
         {% endif %}
     </div>
 
-
     <!-- Curriculum Vitae Section -->
-    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
-      
+    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
         <div class="flex justify-between items-center">
-            <h2 class="text-2xl font-bold text-primary_black">{% translate "Curriculum Vitae" %}</h2>
+            <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Curriculum Vitae" %}</h2>
             <a href="{% url 'upload_curriculum' %}"
-                class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark">
-                Añadir
+                class="bg-primary_medium text-white px-4 py-2 rounded-xl hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
+                {% translate "Añadir" %}
             </a>
         </div>
-  
+
         {% if profile.freelancer_cv and profile.freelancer_cv.file %}
-        <a href="{{ profile.freelancer_cv.file.url }}" class="text-purple-600 hover:text-purple-500 underline">{% translate "Descargar Curriculum" %}</a>
+        <a href="{{ profile.freelancer_cv.file.url }}" class="text-primary_medium hover:underline mt-2 block">{% translate "Descargar Curriculum" %}</a>
         {% else %}
         <p class="text-gray-500">{% translate "No se ha subido ningún CV aún." %}</p>
         {% endif %}
     </div>
 
     <!-- Calificaciones y Comentarios -->
-    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
-        <h2 class="text-2xl font-bold text-primary_black">{% translate "Calificaciones y Comentarios" %}</h2>
+    <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-6 md:p-8">
+        <h2 class="text-xl md:text-2xl font-bold text-primary_black">{% translate "Calificaciones y Comentarios" %}</h2>
 
-
-
-        
-        
-                <!-- Contenedor de Calificaciones -->
-                <div class="space-y-6">
-                    {% for rating in ratings %}
-                    <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-primary_medium transition-transform duration-300 hover:shadow-lg hover:scale-105">
-                        <div class="flex justify-between items-center">
-                            <div class="flex items-center space-x-4">
-                                <!-- Mostrar estrellas -->
-                                <div class="flex text-blue-500">
-                                    {% for i in rating.star_range %}
-                                        <span class="text-4xl">★</span>  
-                                    {% endfor %}
-                                </div>
-                                <p class="text-gray-500 text-sm">por <strong>{{ rating.client.username }}</strong></p>
-                            </div>
-                            <p class="text-gray-400 text-sm">{{ rating.created_at|date:"d M Y" }}</p>
+        <!-- Contenedor de Calificaciones -->
+        <div class="space-y-6 mt-4">
+            {% for rating in ratings %}
+            <div class="bg-white rounded-lg shadow-md p-6 border-l-4 border-primary_medium transition-transform duration-300 hover:shadow-lg hover:scale-105">
+                <div class="flex justify-between items-center">
+                    <div class="flex flex-col md:flex-row items-center space-x-4">
+                        <!-- Mostrar estrellas -->
+                        <div class="flex text-primary_medium">
+                            {% for i in rating.star_range %}
+                                <span class="text-4xl">★</span>
+                            {% endfor %}
                         </div>
-                        <p class="mt-4 text-gray-700 text-md">{{ rating.comment }}</p>
-                    
-        
-                        <!-- Botones para acciones del comentario (Editar o Eliminar) -->
-                        <div class="flex justify-end space-x-4 mt-2">
-                            <!-- Eliminar comentario -->
-                            <form action="{% url 'delete_rating' rating.id %}" method="post" class="inline">
-                                {% csrf_token %}
-                                <button type="submit"
-                                    class="text-red-500 hover:underline text-sm font-semibold hover:text-red-600 transition-colors">
-                                    Eliminar Calificación
-                                </button>
-                            </form>
-                        </div>
-        
-                        {% if rating.response %}
-                        <!-- Respuesta del Freelancer -->
-                        <div class="mt-4 bg-gray-100 rounded-lg p-4 border border-gray-200">
-                            <p class="text-sm text-gray-600"><strong>Respuesta:</strong> {{ rating.response.response_text }}</p>
-                            <div class="flex justify-end space-x-4 mt-2">
-                                <!-- Editar respuesta -->
-                                <a href="javascript:void(0)" onclick="openEditResponseModal('{{ rating.response.id }}')" class="text-primary_medium hover:underline text-sm font-semibold">Editar Respuesta</a>
-        
-                                <!-- Eliminar respuesta -->
-                                <form action="{% url 'delete_rating_response' rating.response.id %}" method="post" class="inline">
-                                    {% csrf_token %}
-                                    <button type="submit"
-                                        class="text-red-500 hover:underline text-sm font-semibold hover:text-red-600 transition-colors">
-                                        Eliminar Respuesta
-                                    </button>
-                                </form>
-                            </div>
-                        </div>
-                        {% else %}
-                        <!-- Botón para responder si no hay respuesta -->
-                        <div class="mt-4">
-                            <a href="javascript:void(0)" onclick="openResponseModal('{{ rating.id }}')"
-                                class="inline-block bg-primary_medium text-white px-4 py-2 rounded-md hover:bg-primary_dark transition-colors">
-                                Responder a esta calificación
-                            </a>
-                        </div>
-                        {% endif %}
+                        <p class="text-gray-500 text-sm">por <strong>{{ rating.client.username }}</strong></p>
                     </div>
-                    {% empty %}
-                    <p class="text-gray-500">Sin calificaciones aún. Sé el primero en calificar.</p>
-                    {% endfor %}
+                    <p class="text-gray-400 text-sm">{{ rating.created_at|date:"d M Y" }}</p>
                 </div>
-        
+                <p class="mt-4 text-gray-700 text-md">{{ rating.comment }}</p>
+
+                <!-- Botones para acciones del comentario (Editar o Eliminar) -->
+                <div class="flex justify-end space-x-4 mt-2">
+                    <!-- Eliminar comentario -->
+                    <form action="{% url 'delete_rating' rating.id %}" method="post" class="inline">
+                        {% csrf_token %}
+                        <button type="submit"
+                            class="text-red-500 hover:underline text-sm font-semibold hover:text-red-600 transition-colors">
+                            Eliminar Calificación
+                        </button>
+                    </form>
+                </div>
+
+                {% if rating.response %}
+                <!-- Respuesta del Freelancer -->
+                <div class="mt-4 bg-gray-100 rounded-lg p-4 border border-gray-200">
+                    <p class="text-sm text-gray-600"><strong>Respuesta:</strong> {{ rating.response.response_text }}</p>
+                    <div class="flex justify-end space-x-4 mt-2">
+                        <!-- Editar respuesta -->
+                        <a href="javascript:void(0)" onclick="openEditResponseModal('{{ rating.response.id }}')" class="text-primary_medium hover:underline text-sm font-semibold">Editar Respuesta</a>
+
+                        <!-- Eliminar respuesta -->
+                        <form action="{% url 'delete_rating_response' rating.response.id %}" method="post" class="inline">
+                            {% csrf_token %}
+                            <button type="submit"
+                                class="text-red-500 hover:underline text-sm font-semibold hover:text-red-600 transition-colors">
+                                Eliminar Respuesta
+                            </button>
+                        </form>
+                    </div>
+                </div>
+                {% else %}
+                <!-- Botón para responder si no hay respuesta -->
+                <div class="mt-4">
+                    <a href="javascript:void(0)" onclick="openResponseModal('{{ rating.id }}')"
+                        class="inline-block bg-primary_medium text-white px-4 py-2 rounded-md hover:bg-primary_dark transition-colors">
+                        Responder a esta calificación
+                    </a>
+                </div>
+                {% endif %}
+            </div>
+            {% empty %}
+            <p class="text-gray-500">{% translate "Sin calificaciones aún. Sé el primero en calificar." %}</p>
+            {% endfor %}
+        </div>
 
         <!-- Botón para agregar calificación -->
         {% if not is_owner %}
@@ -273,7 +262,7 @@
                         class="w-full p-4 border border-primary_light rounded-md focus:ring-primary_medium focus:border-primary_medium bg-bg_gray placeholder-primary_lightest shadow-sm hover:shadow-md transition-shadow duration-300"></textarea>
                 </div>
                 <button type="submit"
-                    class="w-full bg-primary_medium text-white hover:bg-primary_dark transition-colors px-4 py-2 rounded">{% translate "Enviar Respuesta"%}</button>
+                    class="w-full bg-primary_medium text-white hover:bg-primary_dark transition-colors px-4 py-2 rounded">{% translate "Enviar Respuesta" %}</button>
             </form>
         </div>
     </div>
