--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -4,43 +4,73 @@
 {% block app_content %}
 <div class="flex flex-col items-start justify-center w-full h-full px-8">
 
+
     <!-- Información del Freelancer -->
     <div class="w-full bg-bg_gray shadow-lg rounded-lg p-8">
         <div class="flex flex-col sm:flex-row items-center sm:items-start">
-            <img src="{% if request.profile.photo %}{{ request.profile.photo.url }}{% else %}https://avatars.githubusercontent.com/u/1561955?v=4{% endif %}"
+            <img src="{% if request.profile.photo %}{{ request.profile.photo.url }}{% else %}https://img.freepik.com/vector-premium/icono-perfil-avatar-predeterminado-imagen-usuario-redes-sociales-icono-avatar-gris-silueta-perfil-blanco-ilustracion-vectorial_561158-3383.jpg{% endif %}"
                 alt="Foto de {{ request.profile.user.username }}" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full shadow-lg">
             <div class="sm:ml-6 mt-6 sm:mt-0 flex-1">
                 <h1 class="text-3xl sm:text-3xl font-bold text-primary_medium">{{ request.profile.user.username }}</h1>
-                <p class="text-primary_black font-semibold">Desarrollador Full Stack</p>
+                <p class="text-primary_black font-semibold">
+                    {% if request.profile.job_title %}
+                        {{ request.profile.job_title }}
+                    {% else %}
+                        {% translate "No se ha agregado información de empleo" %}
+                    {% endif %}
+                </p>
                 <p class="text-primary_black mt-2">
-                    Apasionado del desarrollo web con más de 5 años de experiencia en la creación de aplicaciones
-                    robustas y escalables.
+                    {% if request.profile.about_me %}
+                        {{ request.profile.about_me }}
+                    {% else %}
+                        {% translate "No se ha agregado descripción personal" %}
+                    {% endif %}
                 </p>
                 <p class="text-primary_black mt-2 flex items-center">
-                    Cali, Valle del Cauca, Colombia
+                    {% if request.profile.location %}
+                        {{ request.profile.location }}
+                    {% else %}
+                        {% translate "Ubicación no proporcionada" %}
+                    {% endif %}
                     <span class="ml-2">
                         {% include 'icon/LocationIcon.html' %}
                     </span>
                 </p>
                 <div class="flex space-x-4 mt-4">
-                    <a href="https://www.linkedin.com" aria-label="LinkedIn"
+                    {% if request.profile.linkedin %}
+                    <a href="{{ request.profile.linkedin }}" aria-label="LinkedIn"
                         class="text-primary_medium hover:text-primary_dark">
                         {% include 'icon/LinkedInIcon.html' %}
                     </a>
-                    <a href="https://twitter.com" aria-label="Twitter"
-                        class="text-primary_medium hover:text-primary_dark">
-                        {% include 'icon/TwitterIcon.html' %}
-                    </a>
-                    <a href="https://github.com" aria-label="GitHub"
+                    {% else %}
+                    <p class="text-gray-500">{% translate "No se ha agregado LinkedIn" %}</p>
+                    {% endif %}
+                
+                    {% if request.profile.github %}
+                    <a href="{{ request.profile.github }}" aria-label="GitHub"
                         class="text-primary_medium hover:text-primary_dark">
                         {% include 'icon/GithubIcon.html' %}
                     </a>
+                    {% else %}
+                    <p class="text-gray-500">{% translate "No se ha agregado GitHub" %}</p>
+                    {% endif %}
+                
+                    {% if request.profile.twitter %}
+                    <a href="{{ request.profile.twitter }}" aria-label="Twitter"
+                        class="text-primary_medium hover:text-primary_dark">
+                        {% include 'icon/TwitterIcon.html' %}
+                    </a>
+                    {% else %}
+                    <p class="text-gray-500">{% translate "No se ha agregado Twitter" %}</p>
+                    {% endif %}
                 </div>
+                
                 {% if is_owner %}
-                <button
-                    class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
-                    Editar Perfil
-                </button>
+                <a href="{% url 'add_skills' %}">
+                    <button class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
+                        {% translate "Editar Perfil" %}
+                    </button>
+                </a>
                 {% endif %}
             </div>
         </div>
@@ -49,8 +79,7 @@
             <h2 class="text-xl font-bold text-primary_black">{% translate "Habilidades" %}</h2>
             <div class="mt-4 flex flex-wrap gap-2">
                 {% for skill in skills %}
-                <span
-                    class="bg-primary_lightest text-primary_black px-3 py-1 rounded-full text-sm font-medium shadow-sm">
+                <span class="bg-primary_lightest text-primary_black px-3 py-1 rounded-full text-sm font-medium shadow-sm">
                     {{ skill.name }}
                 </span>
                 {% empty %}
