feat: custom profile y register freelancer

--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -66,7 +66,7 @@
                 </div>
                 
                 {% if is_owner %}
-                <a href="{% url 'add_skills' %}">
+                <a href="{% url 'customize_profile' %}">
                     <button class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                         {% translate "Editar Perfil" %}
                     </button>
